2005-04-03  Lars Clausen  <lars@raeder.dk>

	* lib/polyshape.c: 
	* lib/beziershape.c: Main points.  A crude solution, having the
	center in the middle of the bb.  Shows a bug in the distance_from
	code for polyshape when a side is horizontal.

2005-04-02  Lars Clausen  <lars@raeder.dk>

	* plug-ins/pstricks/render_pstricks.c: 
	* plug-ins/xfig/xfig-export.c: Patch from Radek
	Krahl <ptasz3k@o2.pl>: Fix decimal point problems. Fixes bugs 

2005-04-02  Hans Breuer  <hans@breuer.org>

	* lib/dia_image.c(dia_image_filename) : return the path 
	again. (bug #172416, Radek Krahl)
	
2005-04-01  Steve Murphy  <murf@e-tools.com>

	* configure.in: Added "rw" to ALL_LINGUAS.

2005-03-31  Lars Clausen  <lars@raeder.dk>

	* lib/neworth_conn.c (neworthconn_update_data): Handle autogap.

	* lib/orth_conn.c (orthconn_update_data): Handle autogap while not
	autorouting.  

	* objects/network/basestation.c: Main points.

2005-03-27  Hans Breuer  <hans@breuer.org>

	* app/Makefile.am : removed some pixmap/*.xpm from EXTRA_DIST
	* app/pixmaps.h : removed arrow.xpm
	* lib/Makefile.am : added diamarshal
	* plug-ins/python/Makefile.am : added makefile.msc to EXTRA_DIST
	=> makes 'make dist' pass and produce a useable package

	* po/*.po : 'noise' profuced by make dist

2005-03-24  Lars Clausen  <lars@raeder.dk>

	* objects/flowchart/parallelogram.c (pgram_update_data): 
	* objects/flowchart/ellipse.c (ellipse_update_data): 
	* objects/flowchart/diamond.c (diamond_update_data): 
	* objects/flowchart/box.c (box_update_data): Main points.

	* objects/custom/custom_object.c (custom_create): 
	* objects/custom/shape_info.h: 
	* shapes/Assorted/square.shape: 
	* objects/custom/shape_info.c (load_shape_info): 
	* doc/shape.dtd: Added main point support to shapes, and an
	example of how to use it.

2005-03-21  Lars Clausen  <lars@raeder.dk>

	* lib/autoroute.c (autoroute_layout_orthconn): Remember to
	unnormalize from same point as you normalize, or else!
